# pinterest-media-scraper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md
src/: main.py
src/app/: downloader.py  ui.py  utils.py
tests/: test_downloader.py
