[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinterest-media-scraper"
version = "1.0.0"
authors = [
  { name="ukr", email="ujjwalkrai@gmail.com" },
]
description = "A simple pinterest media scraper"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=10.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "requests-mock>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/uikraft-hub/pinterest-media-scraper"
"Bug Tracker" = "https://github.com/uikraft-hub/pinterest-media-scraper/issues"